<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="kraf.george.navigation.gameStart">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/game_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="52dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.0"/>
        <Button
                android:text="@string/strSodaStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSodaStart" android:layout_marginTop="224dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.497"/>
        <Button
                android:text="@string/strKitchenStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnKitchenStart" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btnSodaStart" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.495"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>