<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="kraf.george.navigation.Kitchen">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/kitchen_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textAlignment="center" android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
        <ImageView
                android:src="@drawable/kitchen"
                android:layout_width="390dp"
                android:layout_height="390dp"
                android:id="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/strBtnWash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnWash" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="60dp" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <Button
                android:text="@string/strBtnNoWash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNoWash" app:layout_constraintStart_toEndOf="@+id/btnWash"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.476"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>