<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="kraf.george.navigation.SodaFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/soda_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/soda_start_img" android:textSize="24sp"
                android:textAlignment="center"/>
        <ImageView
                android:src="@drawable/soda"
                android:layout_width="390dp"
                android:layout_height="390dp"
                android:id="@+id/soda_start_img"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
        />
        <Button
                android:text="@string/strPhoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneButton" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.508"
                app:layout_constraintStart_toEndOf="@+id/catButton" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/strCatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/catButton" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.508"
                android:layout_marginStart="80dp" app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>